--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@ $bg: #ffdbb4;
 body {
 	font: 15px sans-serif, Arial, Verdana;
 	background: #f0f0ff;
-	overflow: hidden;
+	overflow: visible;
 }
 h3 {color: $white;}
 svg {
