--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 
 body {
     font: 15px sans-serif, Arial, Verdana;
-    background: #121212;
+    background: #f0f0ff;
     overflow: hidden;
 }
 h3 {color: white;}
@@ -169,9 +169,3 @@ box-shadow: 0 0 7px #000000;
 	background: #f3f3f3;
 }
 
-/*----------------------------
-@Made by Fleksl
-
-Telegram: @fleksl;
-E-mail: webcoder.ru@gmail.com
-------------------------------*/
