--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /*****************************
-****** Avatar Maker CSS ******
+****** My Material Avatar Maker CSS ******
 *****************************/
 
 * {
