--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 /*****************************
-****** Avatar Maker CSS ******
+****** My Material Avatar Maker CSS ******
 *****************************/
 $white: #ffffff;
 $border: #707070;
